--- a/login.html
+++ b/login.html
@@ -22,20 +22,19 @@
         </ul>
       </nav>
     </div>
-    <form id="login" method="get" action="login.php">
       <label><b>Email Address</b></label>
       <input type="text" name="email" id="Uname" placeholder="Email">
       <br><br>
       <label><b>Password</b></label>
       <input type="Password" name="password" id="Pass" placeholder="Password">
       <br><br>
-      <button name="log" id="log" value="Log In Here" onclick="onClickLoginEventHandler">Log In Here</button>
+      <button name="log" id="log" value="Log In Here" onclick="onClickLoginEventHandler()">Log In Here</button>
       <br><br>
       <input type="checkbox" id="check">
       <span>Remember me</span>
       <br><br>
       <a href="#">Forgot Password</a>
-    </form>
+      <a id= "register" href="/register.html">Don't have an account yet? Click here to register</a>
   </div>
 </body>
 
