--- a/register.html
+++ b/register.html
@@ -29,7 +29,7 @@
             <label><b>Password</b></label>
             <input type="Password" name="Pass" id="Pass" placeholder="Password">
             <br><br>
-            <input type="button" name="log" id="log" value="Click here to register" onclick=onClickRegisterEventHandler>
+            <input type="button" name="register" id="register" value="Click here to register" onclick="onClickRegisterEventHandler()">
         </form>
     </div>
 </body>
