--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="https:cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link rel="stylesheet" href="./navbar.css">
   <script type="text/javascript" src="app.js" async></script>
-  <script type="text/javascript" src="catalog.js" defer></script>
+  <script type="text/javascript" src="catalog.js" async></script>
 </head>
 
 <body>
