--- a/cart.html
+++ b/cart.html
@@ -41,6 +41,7 @@
                     </tr>
                 </thead>
                 
+                <div id="insertItemsUnder"></div>
                 <tbody>
                     <tr>
                         <td>
@@ -64,7 +65,6 @@
                                 </select>
                             </div>
                         </td>
-                        <td class="text-center text-lg text-medium">$43.90</td>
                         <td class="text-center text-lg text-medium">$18.00</td>
                         <td class="text-center"><a class="remove-from-cart" href="#" data-toggle="tooltip" title=""
                                 data-original-title="Remove item"><i class="fa fa-trash"></i></a></td>
@@ -102,8 +102,7 @@
                                 <a class="product-thumb" href="#"><img
                                         src="https://via.placeholder.com/220x180/9932CC/000000" alt="Product"></a>
                                 <div class="product-info">
-                                    <h4 class="product-title"><a href="#"></a></h4><span><em>Size:</em>
-                                        -</span><span><em>Color:</em> Turquoise</span>
+                                    <h4 class="product-title"></h4>
                                 </div>
                             </div>
                         </td>
