--- a/admin.html
+++ b/admin.html
@@ -26,10 +26,16 @@
             <input type="text" id="itemName">
             <label for="productname">Product price:</label>
             <input type="text" id="itemPrice">
-            <label for="productname">Image:</label>
+            <!-- <label for="productname">Image:</label > -->
             <!-- <input type="text" id="itemImage"> -->
-            <input id="fileupload" type="file" name="fileupload" />
-            <input id="upload-button" type="button" value="Add Product" onclick='onClickAddNewProductEventHandler()'>
+            <!-- <input id="fileupload" type="file" name="fileupload" /> -->
+            <form id="upload">
+                <label for="file">Image to upload</label>
+                <input type="file" id="file" accept="image/*" onchange="uploadImage()">
+            
+                <button>Upload</button>
+            </form>
+                        <input id="upload-button" type="button" value="Add Product" onclick='onClickAddNewProductEventHandler()'>
         </form>
         <table id="productsTable">
             <tr>
