--- a/readme.html
+++ b/readme.html
@@ -8,6 +8,8 @@
 
 <body>
   <div class="faq-header">Trendy Shoes Online</div>
+  <div class="faq-header">Eden:</div>
+
 
   <div class="faq-content">
     <div class="faq-question">
@@ -46,6 +48,60 @@
       <div class="plus">+</div>
       <label for="q5" class="panel-title"> Specify all the different routes your app supports</label>
       <div class="panel-content">Login, Register, Logout, GetProducts, addToCart, removerFromCart</div>
+    </div>
+  </div>
+
+
+  <div class="faq-header">Yael:</div>
+
+  <div class="faq-content">
+    <div class="faq-question">
+      <input id="q6" type="checkbox" class="panel">
+      <div class="plus">+</div>
+      <label for="q6" class="panel-title">What are you selling?</label>
+      <div class="panel-content">We are selling shoes :)</div>
+    </div>
+
+    <div class="faq-question">
+      <input id="q7" type="checkbox" class="panel">
+      <div class="plus">+</div>
+      <label for="q7" class="panel-title">What additional page(s) did you add? How to operate it?</label>
+      <div class="panel-content">We added 5 pages - About us, locations, contact us, and not sure if to call it additional - but registration page, to which you can access through the login page</div>
+    </div>
+
+    <div class="faq-question">
+      <input id="q8" type="checkbox" class="panel">
+      <div class="plus">+</div>
+      <label for="q8" class="panel-title"> What was hard to do?</label>
+      <div class="panel-content">As to the way we divded the work between us, I was inchagre of the backend.The begining was the hardest.
+        The idea of what should be done was clear, but between understanding the idea, to implement it, there was quite some gap:<br>
+        - Understanding the whole thing of await + fetch + HTTP methods<br>
+        - Understanidng how to debug<br>
+        - Understanding how our server can connect with the db - learning mongo's documantation<br>
+        - Understanding the whole concept of cookies - req.cookies, res.cookies expected<br><br>
+
+        BUT - After struggeling with the first real functionality contained each element should had been implemented -
+        It was king of starting to go pretty smothly (of course not that smothly - but I could really debug things with understanding what is going on, and why, 
+        and was not just changing things without understanding).<br>
+        
+        I did have struggeled a lot with adding the products each user added to cart to the db, without overwriting the last product was added.
+        Unfortunetly, I wasn't succeeding in doing that. That was hard for me both trying, and both to decide leaving it, after hours and hours of trials :(
+      </div>
+    </div>
+
+    <div class="faq-question">
+      <input id="q9" type="checkbox" class="panel">
+      <div class="plus">+</div>
+      <label for="q9" class="panel-title">Who is your partner? name and id. What did you do? What did your partner
+        do?</label>
+      <div class="panel-content">>Eden Vikler, 309840494, Eden was the one responsible for the frontend, for setting up the data in the db, was responsible for the tests and for dealing with DOS attacks. For what I was working on - can be inferred from the "what was hard part" :) I was working on the backend - routes, client, users - authentication and registration - using cookies and db, add to cart for user, searching in catalog, the admin functionality - ading new products to the store, user events. I also used my git experience from one of the courses here to try get us organize the project.</div>
+    </div>
+
+    <div class="faq-question">
+      <input id="q10" type="checkbox" class="panel">
+      <div class="plus">+</div>
+      <label for="q10" class="panel-title"> Specify all the different routes your app supports</label>
+      <div class="panel-content">/isloggedin, /register, /login, /addNewProductToDB, /removeProductFromDB, /addItemToCart, /removeItemFromCart, /getUsersFromDB, /getItemsFromDB, /itemsExistInCart, /getEventsFromDB, /clearCart, /redirectHome, /successClearCart, /successLogin, /notSuccessLogin, /register, /logout, /backToCart, / </div>
     </div>
   </div>
 </body>
